--- a/index.ipynb
+++ b/index.ipynb
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -475,13 +475,13 @@
        "{'city': 'Las Vegas', 'state': 'Nevada'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")"
+    "dict(city=\"Las Vegas\", state=\"Nevada\")\n"
    ]
   },
   {
