--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
     }
    ],
    "source": [
-    "dict(city=\"Las Vegas\", state=\"Nevada\")\n"
+    "dict(city=\"Las Vegas\", state=\"Nevada\")"
    ]
   },
   {
