Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -481,7 +481,7 @@
     }
    ],
    "source": [
-    "Kimchi = dict(origin=\"Korea\", state=\"Nevada\")"
+    "Kimchi = dict(origin=\"Korea\", classification=\"Food\" , )"
    ]
   },
   {
