Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -466,22 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'city': 'Las Vegas', 'state': 'Nevada'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Kimchi = dict(origin=\"Korea\", classification=\"Food\" , )"
+    "Kimchi = dict(origin=\"Korea\", classification=\"Food\" , desc = \"spicy\")"
    ]
   },
   {
